# ikun-gui

./: .gitmodules  CMakeLists.txt  README.md
cmake/: common.cmake
examples/: HelloWorld.cpp  HelloWorld.h  code_editor.cpp  counter.cpp  counter_component.cpp  image.cpp  main.cpp  scrollview.cpp  test_app.cpp  textview.cpp
examples/text/: test.txt
src/: CMakeLists.txt  ikun_gui.h
src/app/: Application.h  CMakeLists.txt  CommandSet.cpp  CommandSet.h  Window.cpp  Window.h
src/app/android/: Window_android.cpp  Window_android.h  main_android.cpp  surface_glue_android.cpp  surface_glue_android.h
src/app/ios/: Window_ios.h  Window_ios.mm  main_ios.mm
src/app/mac/: Window_mac.h  Window_mac.mm  main_mac.mm
src/app/unix/: Window_unix.cpp  Window_unix.h  keysym2ucs.c  main_unix.cpp
src/app/wasm/: main_wasm.cpp
src/app/win/: Window_win.cpp  Window_win.h  main_win.cpp
src/components/: Button.cpp  Button.h  Components.h  Image.cpp  Image.h  Label.cpp  Label.h  ScrollView.cpp  ScrollView.h  TextView.cpp  TextView.h
src/core/: App.cpp  App.h  FontManager.cpp  FontManager.h  IRuntime.cpp  IRuntime.h  MotionEvent.cpp  MotionEvent.h  VNode.cpp  VNode.h
src/core/base/: copyable.hpp  noncopyable.hpp
src/core/hook/: Scope.cpp  Scope.h  Signal.h  hook.h  scope_helper.cpp  scope_helper.h  use_signal.h
src/render/: IkunApp.cpp  IkunApp.h
